@@ -110,7 +110,7 @@ public class Fighter_FlyingKick extends FighterSkill
 			}
 		}
 		else
-			return maliciousFizzle(mob,target,"<S-NAME> fail(s) to land the flying kick on <T-NAMESELF>.");
+			return maliciousFizzle(mob,target,"<S-NAME> fail(s) to land a flying kick on <T-NAMESELF>.");
 
 		// return whether it worked
 		return success;
