@@ -212,7 +212,7 @@ Joins a fight on the side of a mob of the same faith as specified in the paramet
 BEHAVIOR_CLERICNESS=\
 Behavior   : Clericness\n\r\
 Targets    : MOBs\n\r\
-Parameters : (SUBCLASS NAME) (PROFICIENT)\n\r\
+Parameters : (SUBCLASS NAME) (PROFICIENT) (NOSTATS)\n\r\
 Parameters : (OFFENSIVE,DEFENSIVE,MIXEDOFFENSIVE,MIXEDDEFENSIVE)\n\r\
 Example    : \n\r\
 Example    : Templar\n\r\
@@ -426,7 +426,7 @@ enter a mixed emote.
 BEHAVIOR_FIGHTERNESS=\
 Behavior   : Fighterness\n\r\
 Targets    : MOBs\n\r\
-Parameters : (SUBCLASS NAME) (PROFICIENT)\n\r\
+Parameters : (SUBCLASS NAME) (PROFICIENT) (NOSTATS)\n\r\
 Parameters : (OFFENSIVE,DEFENSIVE,MIXEDOFFENSIVE,MIXEDDEFENSIVE)\n\r\
 Example    : Fighter\n\r\
 Example    : Paladin\n\r\
@@ -445,7 +445,7 @@ Also, be aware that this behavior will modify the mobs stats to better reflect t
 BEHAVIOR_DRUIDNESS=\
 Behavior   : Druidness\n\r\
 Targets    : MOBs\n\r\
-Parameters : (SUBCLASS NAME) (PROFICIENT)\n\r\
+Parameters : (SUBCLASS NAME) (PROFICIENT) (NOSTATS)\n\r\
 Parameters : (OFFENSIVE,DEFENSIVE,MIXEDOFFENSIVE,MIXEDDEFENSIVE)\n\r\
 Example    : \n\r\
 Example    : Druid\n\r\
@@ -465,7 +465,7 @@ Also, be aware that this behavior will modify the mobs stats to better reflect t
 BEHAVIOR_BARDNESS=\
 Behavior   : Bardness\n\r\
 Targets    : MOBs\n\r\
-Parameters : (SUBCLASS NAME) (PROFICIENT)\n\r\
+Parameters : (SUBCLASS NAME) (PROFICIENT) (NOSTATS)\n\r\
 Parameters : (OFFENSIVE,DEFENSIVE,MIXEDOFFENSIVE,MIXEDDEFENSIVE)\n\r\
 Example    : \n\r\
 Example    : Bard\n\r\
@@ -755,7 +755,7 @@ formula.  Variables are: @x1=level, @x2=value, @x3=condition(0-100), \
 BEHAVIOR_MAGENESS=\
 Behavior   : Mageness\n\r\
 Targets    : MOBs\n\r\
-Parameters : (SUBCLASS NAME) (PROFICIENT)\n\r\
+Parameters : (SUBCLASS NAME) (PROFICIENT) (NOSTATS)\n\r\
 Parameters : (OFFENSIVE,DEFENSIVE,MIXEDOFFENSIVE,MIXEDDEFENSIVE)\n\r\
 Example    : \n\r\
 Example    : Mage\n\r\
@@ -2044,7 +2044,7 @@ The valid masks for the citizen and guardian mobs are as follows: \n\r\
 BEHAVIOR_THIEFNESS=\
 Behavior   : Thiefness\n\r\
 Targets    : MOBs\n\r\
-Parameters : (SUBCLASS NAME) (PROFICIENT)\n\r\
+Parameters : (SUBCLASS NAME) (PROFICIENT) (NOSTATS)\n\r\
 Parameters : (OFFENSIVE,DEFENSIVE,MIXEDOFFENSIVE,MIXEDDEFENSIVE)\n\r\
 Example    : \n\r\
 Example    : Thief\n\r\
